feat: update configurations for Rust 1.92 compatibility
- Update clippy.toml MSRV from 1.75.0 to 1.92.0
- Add Rust version comments to rustfmt.toml files
- Prepare project for latest Rust features and improvements
- Ensure all tooling compatible with Rust 1.92

--- a/rust/clippy.toml
+++ b/rust/clippy.toml
@@ -2,7 +2,8 @@
 # Based on 2025 best practices for Rust static analysis
 
 # Set the MSRV (Minimum Supported Rust Version)
-msrv = "1.75.0"
+# Updated to match Docker Rust version 1.92
+msrv = "1.92.0"
 
 # Allow certain lints that are too strict for this project
 allow-private-module-inception = true
