--- a/.github/workflows/ci-working.yml
+++ b/.github/workflows/ci-working.yml
@@ -33,18 +33,16 @@ jobs:
           ${{ runner.os }}-cargo-
 
     - name: Check formatting
-      uses: actions-rs/cargo@v1
-      with:
-        command: fmt
-        args: -- --check
+      run: |
+        cd rust && cargo fmt -- --check
+        cd ../binary-container-poc && cargo fmt -- --check
 
     - name: Run clippy
-      uses: actions-rs/cargo@v1
-      with:
-        command: clippy
-        args: -- -D warnings
+      run: |
+        cd rust && cargo clippy -- -D warnings
+        cd ../binary-container-poc && cargo clippy -- -D warnings
 
     - name: Run tests
-      uses: actions-rs/cargo@v1
-      with:
-        command: test
+      run: |
+        cd rust && cargo test --workspace
+        cd ../binary-container-poc && cargo test
