--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
       uses: Swatinem/rust-cache@v2
 
     - name: Check formatting
-      run: cd rust && cargo fmt -- --check
+      run: cd rust && cargo fmt -- --check --color always
 
     - name: Run clippy
       run: cd rust && cargo clippy -- -D warnings
