chore: update base image in Dockerfile.runtime to debian:bookworm
- Change base image from debian:bookworm-slim to debian:bookworm
- Remove unnecessary installation of ca-certificates as it is included by default

--- a/k8s/Dockerfile.runtime
+++ b/k8s/Dockerfile.runtime
@@ -1,8 +1,5 @@
-FROM debian:bookworm-slim
-
-RUN apt-get update && \
-    apt-get install -y ca-certificates && \
-    rm -rf /var/lib/apt/lists/*
+# Use debian:bookworm instead of bookworm-slim - it includes ca-certificates by default
+FROM debian:bookworm
 
 WORKDIR /app
 
